<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shaadielephant.shaadielephant.registration.registrationActivity"
    tools:showIn="@layout/activity_registration"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/imageViewLogo"
        android:src="@drawable/shaddi_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"

        />


    <EditText
        android:id="@+id/name"
        android:layout_below="@+id/imageViewLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="text"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/name"/>


    <Spinner
        android:id="@+id/gender"
        android:layout_below="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="text"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"

        android:hint="@string/gender"/>

    <EditText
        android:id="@+id/address"
        android:layout_below="@+id/gender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="text"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/address"/>

    <EditText
        android:id="@+id/country"
        android:layout_below="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="text"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/country"/>

    <EditText
        android:id="@+id/city"
        android:layout_below="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="text"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/phoneNo"
        android:layout_below="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="number"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/phoneNo"/>

    <EditText
        android:id="@+id/emailID"
        android:layout_below="@+id/phoneNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:inputType="text"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/emailID"/>

    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/emailID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/password"
        android:password="true"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_below="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_edit_text_background"
        android:layout_margin="@dimen/dialog_register_margin"
        android:singleLine="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:hint="@string/repassword"
        android:password="true"/>



    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/login_button"
        android:layout_below="@+id/repassword"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:textAllCaps="false"/>

</RelativeLayout>
</ScrollView>