<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_bg"
        android:paddingBottom="@dimen/dialog_title_cotainer_padding_bottom">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_item_vendor_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dialog_title_margin_top"/>

        <ImageView
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/close"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:padding="15dp"
            />

        <Spinner
            android:id="@+id/dialog_select_vendor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_title"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:prompt="@string/budget_item_vendor"/>

        <EditText
            android:id="@+id/dialog_select_vendor_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_select_vendor"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/budget_item_vendor_name"
            />

        <EditText
            android:id="@+id/dialog_vendor_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_select_vendor_name"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:inputType="number"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/budget_item_vendor_phone"
            />

        <EditText
            android:id="@+id/dialog_vendor_remarks"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_vendor_phone"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/budget_item_vendor_other_remarks"/>

        <EditText
            android:id="@+id/dialog_vendor_totalcost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_vendor_remarks"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:hint="@string/budget_item_vendor_totalCost"/>

        <EditText
            android:id="@+id/dialog_vendor_advance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_vendor_totalcost"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:inputType="number"
            android:hint="@string/budget_item_vendor_advance"/>


        <Button
            android:id="@+id/dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/dialog_vendor_advance"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:background="@drawable/btn_rounded_add"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


</RelativeLayout>
