<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_bg"
        android:paddingBottom="@dimen/dialog_title_cotainer_padding_bottom">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_fav_vendors_title"
            android:textColor="@color/text_color"
            android:textSize="@dimen/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dialog_title_margin_top"/>

        <ImageView
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/close"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:padding="15dp"/>


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_below="@+id/dialog_title"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:inputType="text"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp" />



        <EditText
            android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:inputType="text"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_favvendor_name"
           />

        <EditText
            android:id="@+id/brief"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subject"
            android:background="@drawable/dialog_edit_text_background"
            android:lines="4"
            android:maxLines="4"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_favvendor_brief"
            android:nextFocusDown="@+id/favvendor_address"/>

        <EditText
            android:id="@+id/favvendor_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brief"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_favvendor_address"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/favvendor_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/favvendor_address"
            android:background="@drawable/dialog_edit_text_background"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_favvendor_phone"
            android:inputType="number"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/dialog_add_fav_vendor"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/favvendor_phone"
            android:layout_margin="@dimen/dialog_event_name_margin"
            android:background="@drawable/btn_rounded_add"
            android:text="@string/add"
            android:textColor="@android:color/white"/>

    </RelativeLayout>


</RelativeLayout>
